// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors() includes more information when abourtEarly is false 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"role\\" must be larger than or equal to 4. \\"name\\" is required",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "role",
      "name",
    ],
    "source": "query",
  },
}
`;

exports[`errors() only includes key values if joi returns details 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"first\\" is required",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [],
    "source": "body",
  },
}
`;

exports[`errors() responds with a joi error from celebrate middleware 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"role\\" must be larger than or equal to 4",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "role",
    ],
    "source": "query",
  },
}
`;

exports[`format() returns a formatted error object with options 1`] = `
Object {
  "joi": [ValidationError: "value" must be [foo]],
  "meta": Object {
    "source": "body",
  },
  Symbol(celebrated): true,
}
`;

exports[`format() returns a formatted error object without options 1`] = `
Object {
  "joi": [ValidationError: "value" must be [foo]],
  "meta": Object {
    "source": "body",
  },
  Symbol(celebrated): false,
}
`;
